# rust-rayon-wasm-demo

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
frontend/: index.html  wasm-worker.js
