[package]
name = "wasm-bindgen-rayon-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
rayon = { version = "1.5", optional = true }
wasm-bindgen-rayon = { version = "1.0.3", optional = true }

num-complex = "0.4.0"
once_cell = "1.7.2"
getrandom = { version = "0.2.2", features = ["js"] }
rand = "0.8.3"
hsl = "0.1.1"

[features]
parallel = ["rayon", "wasm-bindgen-rayon"]
